minor css revision to prevent overlap over section title

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -135,8 +135,11 @@ body {
 }
 
 #card-section {
+	background: white; 
 	position: absolute;
     top: 10px;
+    width: 90%;
+    z-index: 100;
     }
 
 #card-front,
